Add App Store technical support pages in English and Chinese

--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
       <h3><a href="archer-tower-defense-privacy.html">Archer Tower Defense Battle</a></h3>
       <p>Specific privacy policy for Archer Tower Defense Battle app.</p>
     </div>
+
+    <div class="policy-item">
+      <h3><a href="app-store-support.html">App Store Technical Support</a></h3>
+      <p>Technical support and contact information for App Store applications.</p>
+    </div>
   </div>
 
   <hr>
