Refactor privacy policy and support pages to remove developer-specific information and streamline content

--- a/archer-tower-defense-privacy.html
+++ b/archer-tower-defense-privacy.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Privacy Policy | Archer Tower Defense Battle</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Archer Tower Defense Battle Privacy Policy">
+  <meta name="description" content="Privacy Policy for Archer Tower Defense Battle">
   <style>
     body{max-width:860px;margin:40px auto;padding:0 16px;line-height:1.7;font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial;}
     h1,h2{line-height:1.3}
@@ -14,8 +14,7 @@
 <body>
   <h1>Privacy Policy</h1>
   <p><strong>Applicable App:</strong> Archer Tower Defense Battle (Package: com.everydaygame.archertowerdefensebattle)</p>
-  <p><strong>Developer:</strong> Everyday Game Studio</p>
-  <p><strong>Effective Date:</strong> October 19, 2025</p>
+    <p><strong>Effective Date:</strong> October 19, 2025</p>
 
   <h2>What Information We Collect</h2>
   <ul>
@@ -56,8 +55,7 @@
   <p>We may update this policy from time to time. When updated, a new version will be posted on this page and the "Effective Date" will be updated.</p>
 
   <h2>Contact Us</h2>
-  <p>Everyday Game Studio (Privacy Contact)<br>
-     Email: q908267264@gmail.com</p>
+  <p>Email: q908267264@gmail.com</p>
 
   <hr>
   <p><em>Last updated: October 19, 2025</em></p>
