--- a/general-privacy-policy.html
+++ b/general-privacy-policy.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Privacy Policy | Everyday Game Studio</title>
+  <title>Privacy Policy</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Everyday Game Studio Privacy Policy">
+  <meta name="description" content="Privacy Policy">
   <style>
     body{max-width:860px;margin:40px auto;padding:0 16px;line-height:1.7;font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial;}
     h1,h2{line-height:1.3}
@@ -13,8 +13,7 @@
 </head>
 <body>
   <h1>Privacy Policy</h1>
-  <p><strong>Developer:</strong> Everyday Game Studio</p>
-  <p><strong>Effective Date:</strong> October 26, 2025</p>
+    <p><strong>Effective Date:</strong> October 26, 2025</p>
 
   <h2>What Information We Collect</h2>
   <ul>
@@ -55,8 +54,7 @@
   <p>We may update this policy from time to time. When updated, a new version will be posted on this page and the "Effective Date" will be updated.</p>
 
   <h2>Contact Us</h2>
-  <p>Everyday Game Studio (Privacy Contact)<br>
-     Email: q908267264@gmail.com</p>
+  <p>Email: q908267264@gmail.com</p>
 
   <hr>
   <p><em>Last updated: October 26, 2025</em></p>
