--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Privacy Policies | Everyday Game Studio</title>
+  <title>Privacy Policies</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Everyday Game Studio Privacy Policies">
+  <meta name="description" content="Privacy Policies">
   <style>
     body{max-width:860px;margin:40px auto;padding:0 16px;line-height:1.7;font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial;}
     h1,h2{line-height:1.3}
@@ -15,15 +15,14 @@
   </style>
 </head>
 <body>
-  <h1>Everyday Game Studio - Privacy Policies</h1>
-  <p>This page contains privacy policies for applications developed by Everyday Game Studio.</p>
+  <h1>Privacy Policies</h1>
 
   <div class="policy-list">
     <h2>Available Privacy Policies</h2>
 
     <div class="policy-item">
       <h3><a href="general-privacy-policy.html">General Privacy Policy</a></h3>
-      <p>General privacy policy applicable to most Everyday Game Studio applications.</p>
+      <p>General privacy policy applicable to applications.</p>
     </div>
 
     <div class="policy-item">
@@ -33,15 +32,11 @@
 
     <div class="policy-item">
       <h3><a href="app-store-support.html">App Store Technical Support</a></h3>
-      <p>Technical support and contact information for App Store applications.</p>
+      <p>Technical support and contact information.</p>
     </div>
   </div>
 
-  <hr>
-  <h2>Contact Information</h2>
-  <p><strong>Developer:</strong> Everyday Game Studio<br>
-     <strong>Email:</strong> q908267264@gmail.com</p>
-
+  
   <p><em>Last updated: October 26, 2025</em></p>
 </body>
 </html>
