--- a/app-store-support.html
+++ b/app-store-support.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>App Store Support | Everyday Game Studio</title>
+  <title>App Store Support</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="App Store technical support and contact information for Everyday Game Studio applications">
+  <meta name="description" content="App Store technical support and contact information">
   <style>
     body{max-width:860px;margin:40px auto;padding:0 16px;line-height:1.7;font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial;}
     h1,h2{line-height:1.3}
@@ -20,7 +20,6 @@
 </head>
 <body>
   <h1>App Store Technical Support</h1>
-  <p>Thank you for using Everyday Game Studio applications! We provide comprehensive technical support for all our apps available on the App Store.</p>
 
   <div class="support-info">
     <h2>Support Services</h2>
@@ -36,18 +35,8 @@
     <h2>Contact Information</h2>
 
     <div class="contact-item">
-      <span class="contact-label">Developer Name:</span><br>
-      Zengfei Xu
-    </div>
-
-    <div class="contact-item">
       <span class="contact-label">Support Email:</span><br>
       <a href="mailto:q908267264@gmail.com">q908267264@gmail.com</a>
-    </div>
-
-    <div class="contact-item">
-      <span class="contact-label">Studio Name:</span><br>
-      Everyday Game Studio
     </div>
   </div>
 
@@ -64,10 +53,7 @@
   <h2>Response Time</h2>
   <p>We typically respond to support inquiries within 24-48 hours during business days. For urgent technical issues, please include "URGENT" in your email subject line.</p>
 
-  <div class="back-link">
-    <p><a href="index.html">← Back to Privacy Policies Home</a></p>
-  </div>
-
+  
   <hr>
   <p><em>Last updated: October 29, 2025</em></p>
 </body>
