Add App Store Privacy Policy and link in index.html

--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
     </div>
 
     <div class="policy-item">
+      <h3><a href="app-store-privacy-policy.html">App Store Privacy Policy</a></h3>
+      <p>Comprehensive privacy policy designed for App Store applications, including App Privacy Nutrition Label compliance.</p>
+    </div>
+
+    <div class="policy-item">
       <h3><a href="app-store-support.html">App Store Technical Support</a></h3>
       <p>Technical support and contact information.</p>
     </div>
