--- a/app-store-privacy-policy.html
+++ b/app-store-privacy-policy.html
@@ -19,123 +19,147 @@
     strong{color:#333;}
     a{color:#007aff;text-decoration:none;}
     a:hover{text-decoration:underline;}
+    table{width:100%;border-collapse:collapse;margin:15px 0;}
+    th,td{border:1px solid #e1e1e1;padding:12px;text-align:left;}
+    th{background:#f6f8fa;font-weight:600;}
+    .tracking-section{background:#f6f8fa;padding:15px;border-left:4px solid #007aff;margin:15px 0;}
   </style>
 </head>
 <body>
   <h1>App Store Privacy Policy</h1>
 
   <div class="privacy-section">
-    <p><strong>Effective Date:</strong> October 29, 2025</p>
-    <p>This Privacy Policy describes how we collect, use, and share your information when you use our iOS applications available on the App Store.</p>
+    <p><strong>Effective Date:</strong> October 30, 2025</p>
+    <p>This Privacy Policy explains how we collect, use, share, and protect information when you use our iOS applications available on the App Store.</p>
   </div>
 
   <h2>Information We Collect</h2>
 
   <div class="data-type">
-    <h3>Device and Usage Data</h3>
+    <h3>Identifiers</h3>
     <ul>
-      <li><strong>Device Information:</strong> Device model, operating system version, device identifier (IDFV), language settings, and country/region</li>
-      <li><strong>App Usage Data:</strong> App version, session duration, feature usage statistics, crash reports, and performance metrics</li>
-      <li><strong>Log Data:</strong> Technical information about how you interact with the app, timestamps, and diagnostic information</li>
+      <li>Device Identifier (IDFV)</li>
+      <li>Advertising Identifier (IDFA) (only if you grant tracking permission via App Tracking Transparency)</li>
     </ul>
   </div>
 
   <div class="data-type">
-    <h3>App Store Connect Data (if applicable)</h3>
+    <h3>Usage and Diagnostic Data</h3>
     <ul>
-      <li><strong>In-App Purchase Information:</strong> Purchase receipts, product IDs, and transaction completion status from App Store Connect</li>
-      <li><strong>App Store Analytics:</strong> User engagement metrics, conversion rates, and download statistics (aggregated and anonymized)</li>
+      <li>App version, session duration, feature usage statistics, performance metrics, and crash reports</li>
+    </ul>
+  </div>
+
+  <div class="data-type">
+    <h3>Purchase Information</h3>
+    <ul>
+      <li>In-app purchase receipts, product IDs, and transaction status (used to validate purchases through StoreKit)</li>
+    </ul>
+  </div>
+
+  <div class="data-type">
+    <h3>Log Data</h3>
+    <ul>
+      <li>Timestamps and technical details needed to diagnose errors and analyze performance</li>
     </ul>
   </div>
 
   <h2>How We Use Your Information</h2>
   <div class="privacy-section">
-    <p>We use the collected information for the following purposes:</p>
     <ul>
-      <li><strong>App Functionality:</strong> To provide, maintain, and improve our app features and performance</li>
-      <li><strong>Analytics:</strong> To understand user behavior, optimize app performance, and fix bugs</li>
-      <li><strong>Support:</strong> To provide customer support and respond to your inquiries</li>
-      <li><strong>Security:</strong> To protect against fraud, abuse, and ensure app security</li>
-      <li><strong>Legal Compliance:</strong> To comply with applicable laws and regulations</li>
+      <li><strong>App Functionality</strong> – Provide core features, verify purchases, prevent fraud, and improve stability</li>
+      <li><strong>Analytics</strong> – Understand app performance and user interaction to guide updates</li>
+      <li><strong>Advertising and Attribution</strong> – If you grant permission, use device identifiers for personalized ads and measurement across other apps and websites</li>
+      <li><strong>Support and Security</strong> – Respond to inquiries and protect against abuse</li>
     </ul>
   </div>
 
-  <h2>App Privacy Nutrition Label Compliance</h2>
-  <div class="privacy-section">
-    <p>This policy is designed to be transparent about our data practices in accordance with App Store requirements:</p>
-    <ul>
-      <li><strong>Data Collection:</strong> We only collect data that is necessary for app functionality and improvement</li>
-      <li><strong>Data Usage:</strong> All data usage is clearly explained in this policy</li>
-      <li><strong>Third-Party Sharing:</strong> We only share data with trusted third parties when necessary</li>
-      <li><strong>User Control:</strong> You have control over your data as described in this policy</li>
-    </ul>
+  <h2>Tracking and Your Choices</h2>
+  <div class="tracking-section">
+    <p>We request App Tracking Transparency permission before accessing the IDFA. Tracking means linking data from this app with data from other companies' apps or websites for advertising or measurement purposes.</p>
+    <p>If you choose "Ask App Not to Track," we will not access the IDFA and will not use any other method to track you. You can change this choice anytime in Settings > Privacy & Security > Tracking.</p>
   </div>
 
   <h2>Third-Party Services</h2>
   <div class="privacy-section">
-    <p>We may use the following third-party services:</p>
-    <ul>
-      <li><strong>Analytics:</strong> Apple Analytics, Firebase Analytics</li>
-      <li><strong>Crash Reporting:</strong> Firebase Crashlytics</li>
-      <li><strong>In-App Purchases:</strong> App Store Connect (StoreKit)</li>
-    </ul>
-    <p>These third-party services have their own privacy policies and we are not responsible for their data practices.</p>
+    <p>We use trusted third parties to deliver ads, analyze usage, and handle transactions.</p>
+    <table>
+      <thead>
+        <tr>
+          <th>Service</th>
+          <th>Purpose</th>
+          <th>Data Shared</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Google AdMob</td>
+          <td>Ad serving and measurement</td>
+          <td>Device ID (IDFA/IDFV), usage data, approximate location</td>
+        </tr>
+        <tr>
+          <td>Unity Ads</td>
+          <td>Ad serving and rewarded video</td>
+          <td>Device ID (IDFA/IDFV), usage data, approximate location</td>
+        </tr>
+        <tr>
+          <td>Firebase Analytics</td>
+          <td>App usage and performance</td>
+          <td>Usage data, diagnostic data</td>
+        </tr>
+        <tr>
+          <td>Firebase Crashlytics</td>
+          <td>Crash reporting</td>
+          <td>Diagnostic data</td>
+        </tr>
+        <tr>
+          <td>Apple StoreKit / App Store Connect</td>
+          <td>In-app purchases and receipts</td>
+          <td>Purchase information</td>
+        </tr>
+      </tbody>
+    </table>
+    <p>Each third party operates under its own privacy policy.</p>
   </div>
 
   <h2>Data Security and Retention</h2>
   <div class="privacy-section">
-    <p>We implement appropriate security measures to protect your information:</p>
     <ul>
-      <li>Data is encrypted during transmission</li>
-      <li>Access to data is limited to authorized personnel</li>
-      <li>We retain data only as long as necessary for the purposes described in this policy</li>
-      <li>When data is no longer needed, it is securely deleted or anonymized</li>
+      <li>Data is encrypted during transmission.</li>
+      <li>Access is restricted to authorized personnel only.</li>
+      <li>Data is retained only as long as necessary for the purposes described here and then securely deleted or anonymized.</li>
     </ul>
   </div>
 
-  <h2>Your Rights and Choices</h2>
+  <h2>Your Rights</h2>
   <div class="privacy-section">
-    <p>You have the following rights regarding your data:</p>
-    <ul>
-      <li><strong>Access:</strong> Request access to your personal data</li>
-      <li><strong>Correction:</strong> Request correction of inaccurate data</li>
-      <li><strong>Deletion:</strong> Request deletion of your personal data</li>
-      <li><strong>Restriction:</strong> Request restriction of processing</li>
-      <li><strong>Data Portability:</strong> Request a copy of your data in a machine-readable format</li>
-    </ul>
-    <p>To exercise these rights, please contact us using the information below.</p>
+    <p>Depending on your region, you may request access, correction, deletion, restriction, or portability of your data. Submit requests by email below.</p>
   </div>
 
   <h2>Children's Privacy</h2>
   <div class="privacy-section">
-    <p>Our apps are intended for users aged 13 and older. We do not knowingly collect personal information from children under 13 years of age. If we become aware that we have collected personal information from children under 13, we will take steps to delete such information immediately.</p>
+    <p>Our apps are for users aged 13 and older. We do not knowingly collect personal data from children under 13. If we learn we have done so, we will delete that data.</p>
   </div>
 
-  <h2>International Data Transfers</h2>
+  <h2>International Transfers</h2>
   <div class="privacy-section">
-    <p>Your information may be transferred to and processed in countries other than your own. We ensure that such transfers comply with applicable data protection laws and implement appropriate safeguards to protect your data.</p>
+    <p>Your information may be processed in countries other than your own. We apply appropriate safeguards as required by law.</p>
   </div>
 
   <h2>Changes to This Policy</h2>
   <div class="privacy-section">
-    <p>We may update this Privacy Policy from time to time. When we make changes, we will:</p>
-    <ul>
-      <li>Post the updated policy on this page</li>
-      <li>Update the "Effective Date" at the top of this policy</li>
-      <li>For significant changes, we may notify users through in-app notifications or email</li>
-    </ul>
-    <p>Your continued use of the app after any changes indicates your acceptance of the updated policy.</p>
+    <p>We may update this policy from time to time and will post the latest version at the URL below with an updated Effective Date.</p>
   </div>
 
   <div class="contact-info">
     <h2>Contact Us</h2>
-    <p>If you have any questions about this Privacy Policy or want to exercise your data rights, please contact us:</p>
-    <p><strong>Email:</strong> q908267264@gmail.com</p>
-    <p><strong>Response Time:</strong> We will respond to your inquiry within 30 days</p>
+    <p>Email: q908267264@gmail.com</p>
+    <p>Response Time: within 30 days</p>
+    <p>Privacy Policy URL: <a href="https://jianjinggy.github.io/app-privacy-policies/app-store-privacy-policy.html">https://jianjinggy.github.io/app-privacy-policies/app-store-privacy-policy.html</a></p>
   </div>
 
   <div class="last-updated">
-    <p><em>Last updated: October 29, 2025</em></p>
+    <p><em>Last updated: October 30, 2025</em></p>
   </div>
 </body>
 </html>
